# Algebra-Solver

./: .gitignore  CMakeLists.txt  README.md
Alebra-Solver/src/: Main.cpp  Parser.cpp  Parser.h  Solver.cpp  Solver.h  Tokenizer.cpp  Tokenizer.h  Utils.cpp
src/: Main.cpp  Parser.cpp  Parser.h  Solver.cpp  Solver.h  Tokenizer.cpp  Utils.cpp  main.cpp  parser.cpp  parser.h  solver.cpp  tokenizer.cpp  tokenizer.h  utils.h
